--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,10 @@ android {
     }
 }
 
+repositories{
+    maven { url 'https://jitpack.io'}
+}
+
 dependencies {
 
     implementation platform('com.google.firebase:firebase-bom:28.4.2')
@@ -40,6 +44,10 @@ dependencies {
     implementation 'com.google.android.gms:play-services-auth:19.2.0'
     implementation 'com.firebaseui:firebase-ui-auth:7.2.0'
     implementation 'com.google.firebase:firebase-analytics-ktx'
+    implementation 'com.google.firebase:firebase-firestore-ktx'
+
+
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:1.5.31"
     implementation 'androidx.core:core-ktx:1.6.0'
