--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics-ktx'
     implementation 'com.google.firebase:firebase-firestore-ktx'
 
+    implementation 'androidx.activity:activity-ktx:1.4.0'
 
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 
