--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,12 @@ dependencies {
     implementation 'androidx.activity:activity-ktx:1.4.0'
 
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+
+    def nav_version = "2.3.5"
+    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:1.6.0"
     implementation 'androidx.core:core-ktx:1.7.0'
