--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,9 +16,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".PayActivity" />
-        <activity android:name=".MainUITestActivity">
-
+        <activity android:name=".MainUITestActivity" android:windowSoftInputMode="adjustNothing">
         </activity>
 
 
